# mcp-academic-editor

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  MANIFEST.in  MCP_SETUP.md  Makefile  README.md  SURGICAL_EDITING_COMPLETE.md  claude_config.json  cli.py  demo_comments.json  demo_manuscript.md  demo_vision.json  deploy_to_github.sh  pyproject.toml  requirements-minimal.txt  requirements.txt  run_editor.py  server.py  setup.py  simple_test.py  test_flexible_parsing.py  test_mcp_standalone.py  test_mcp_tools.py  test_mvp.py  test_simple_run.py  test_surgical_pipeline.py
config/: american_anthropologist.json  default.json
examples/: claude_desktop_config.json  example_manuscript.md  sample_comments.json  vision_brief.json
scripts/: emergency_recovery.py
src/: __init__.py  align.py  assemble.py  comment_parsers.py  ingest.py  models.py  patch.py  pipeline.py  plan.py  verify.py
tests/: test_fixed_system.py  test_mcp_connection.py
