[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-academic-editor"
version = "0.1.0"
description = "MCP server for surgical academic manuscript editing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
full = [
    "python-docx>=0.8.11",
    "pypdf2>=3.0.0",
    "torch>=1.13.0",
    "transformers>=4.21.0",
    "sentence-transformers>=2.2.0"
]

[project.scripts]
mcp-academic-editor = "server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]